# ssm-cli

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
ssm_cli/: __main__.py  aws.py  cli.py  cli_args.py  config.py  configclasses.py  context.py  instances.py  xdg.py
ssm_cli/actions/: __init__.py  base.py  list.py  proxycommand.py  shell.py
ssm_cli/commands/: __init__.py  base.py  list.py  proxycommand.py  setup.py  shell.py  tunnel.py
ssm_cli/commands/setup/: __init__.py  definition.py
ssm_cli/selectors/: __init__.py  first.py  gui.py  tui.py
ssm_cli/ssh/: channels.py  forward.py  server.py  shell.py  transport.py
